--- a/app/i18n/en-US/common.json
+++ b/app/i18n/en-US/common.json
@@ -24,5 +24,6 @@
   "Done": "Done",
   "Are you sure you want to log out?": "Are you sure you want to log out?",
   "Name": "Name",
-  "Delete": "Delete"
+  "Delete": "Delete",
+  "Continue": "Continue"
 }
