--- a/app/i18n/en-US/settings.json
+++ b/app/i18n/en-US/settings.json
@@ -20,6 +20,6 @@
   "Confirm stream title and game before going live": "Confirm stream title and game before going live",
   "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!",
   "Your cache directory has been successfully uploaded.  The file name %file% has been copied to your clipboard.  Please paste it into discord and tag a developer.": "Your cache directory has been successfully uploaded.  The file name %file% has been copied to your clipboard.  Please paste it into discord and tag a developer.",
-  "Streamlabels session has been succesfully restarted!": "Streamlabels session has been succesfully restarted!"
-
+  "Streamlabels session has been succesfully restarted!": "Streamlabels session has been succesfully restarted!",
+  "This action will restart the application. Continue?": "This action will restart the application. Continue?"
 }
