--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -106,5 +106,30 @@
   "Rename Source": "Rename Source",
   "Name Source": "Name Source",
   "Layer filters": "Layer filters",
-  "Add layer filter": "Add layer filter"
+  "Add layer filter": "Add layer filter",
+  "Reset Transform": "Reset Transform",
+  "Flip Vertical": "Flip Vertical",
+  "Flip Horizontal": "Flip Horizontal",
+  "Stretch to Screen": "Stretch to Screen",
+  "Fit to Screen": "Fit to Screen",
+  "Center on Screen": "Center on Screen",
+  "Rotate 90 Degrees CW": "Rotate 90 Degrees CW",
+  "Rotate 90 Degrees CCW": "Rotate 90 Degrees CCW",
+  "Rotate 180 Degrees": "Rotate 180 Degrees",
+  "Paste (Reference)": "Paste (Reference)",
+  "Paste (Duplicate)": "Paste (Duplicate)",
+  "Invert Selection": "Invert Selection",
+  "Transform": "Transform",
+  "Export Widget": "Export Widget",
+  "Copy Filters": "Copy Filters",
+  "Paste Filters": "Paste Filters",
+  "Properties": "Properties",
+  "Lock Sources": "Lock Sources",
+  "Unlock Sources": "Unlock Sources",
+  "Group into Folder": "Group into Folder",
+  "Ungroup Folder": "Ungroup Folder",
+  "Group into Scene": "Group into Scene",
+  "Ungroup Scene": "Ungroup Scene",
+  "Create Source Projector": "Create Source Projector"
+
 }
