--- a/app/i18n/en-US/hotkeys.json
+++ b/app/i18n/en-US/hotkeys.json
@@ -4,8 +4,8 @@
   "Start Recording": "Start Recording",
   "Stop Recording": "Stop Recording",
   "Switch to scene": "Switch to scene",
-  "Show %sourcename%": "Show %sourcename%",
-  "Hide %sourcename%": "Hide %sourcename%",
+  "Show %{sourcename}": "Show %{sourcename}",
+  "Hide %{sourcename}": "Hide %{sourcename}",
   "Mute": "Mute",
   "Unmute": "Unmute",
   "Push to Mute": "Push to Mute",
