--- a/app/i18n/en-US/overlays.json
+++ b/app/i18n/en-US/overlays.json
@@ -1,6 +1,6 @@
 {
-  "Successfully saved %filename%": "Successfully saved %filename%",
-  "Successfully loaded %filename%.overlay": "Successfully loaded %filename%.overlay",
+  "Successfully saved %{filename}": "Successfully saved %{filename}",
+  "Successfully loaded %{filename}.overlay": "Successfully loaded %{filename}.overlay",
   "This is an experimental feature.  Use at your own risk.": "This is an experimental feature.  Use at your own risk.",
   "Export Overlay": "Export Overlay",
   "Import Overlay": "Import Overlay",
