--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -91,7 +91,7 @@
   "Add Existing Source": "Add Existing Source",
   "Recommended": "Recommended",
   "Please enter the name of the folder": "Please enter the name of the folder",
-  "Properties for %sourceName%": "Properties for %sourceName%",
+  "Properties for %{sourceName}": "Properties for %{sourceName}",
   "Supports": "Supports",
   "Widget Type": "Widget Type",
   "Configure": "Configure",
