--- a/app/i18n/en-US/widgets.json
+++ b/app/i18n/en-US/widgets.json
@@ -13,7 +13,7 @@
   "Show off how many viewers you have from multiple platforms": "Show off how many viewers you have from multiple platforms",
   "Give your viewers an opportunity of becoming a boss": "Give your viewers an opportunity of becoming a boss",
   "Rolling credits at the end of your stream": "Rolling credits at the end of your stream",
-  "Add %widgetscount% Widgets": "Add %widgetscount% Widgets",
+  "Add %{widgetscount} Widgets": "Add %{widgetscount} Widgets",
   "Rather do this manually?": "Rather do this manually?",
   "Setup later": "Setup later",
   "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "Widget Theme installed & activated. Click here to manage your Widget Profiles."
