--- a/app/i18n/en-US/scenes.json
+++ b/app/i18n/en-US/scenes.json
@@ -10,7 +10,7 @@
   "Scene Collections": "Scene Collections",
   "This is where your ": "This is where your ",
   " live. Clicking the title will dropdown a menu where you can view & manage.": " live. Clicking the title will dropdown a menu where you can view & manage.",
-  "Are you sure you want to remove %collectionName%?": "Are you sure you want to remove %collectionName%?",
+  "Are you sure you want to remove %{collectionName}?": "Are you sure you want to remove %{collectionName}?",
   "Create Scene Projector": "Create Scene Projector",
   "Preview is disabled in performance mode": "Preview is disabled in performance mode",
   "Your preview is currently disabled": "Your preview is currently disabled",
