--- a/i18n/en-US/remote-control.json
+++ b/i18n/en-US/remote-control.json
@@ -8,6 +8,7 @@
   "You can now control Streamlabs OBS from your Android phone.": "You can now control Streamlabs OBS from your Android phone.",
   "To begin, Scan this QR code with your phone.": "To begin, Scan this QR code with your phone.",
   "This feature will only work with the most recent version of the Streamlabs mobile app.": "This feature will only work with the most recent version of the Streamlabs mobile app.",
-  "NOTE: For IOS users, this feature is coming soon.": "NOTE: For IOS users, this feature is coming soon."
+  "NOTE: For IOS users, this feature is coming soon.": "NOTE: For IOS users, this feature is coming soon.",
+  "Click to show": "Click to show"
 
 }
