move language to general settings

--- a/i18n/en-US/settings.json
+++ b/i18n/en-US/settings.json
@@ -21,5 +21,30 @@
   "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!",
   "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.",
   "Streamlabels session has been succesfully restarted!": "Streamlabels session has been succesfully restarted!",
-  "This action will restart the application. Continue?": "This action will restart the application. Continue?"
+  "This action will restart the application. Continue?": "This action will restart the application. Continue?",
+  "Show confirmation dialog when starting streams": "Show confirmation dialog when starting streams",
+  "Show confirmation dialog when stopping streams": "Show confirmation dialog when stopping streams",
+  "Automatically record when streaming": "Automatically record when streaming",
+  "Keep recording when stream stops": "Keep recording when stream stops",
+  "Source Alignement Snapping": "Source Alignement Snapping",
+  "Snap Sources to edge of screen": "Snap Sources to edge of screen",
+  "Snap Sources to other sources": "Snap Sources to other sources",
+  "Stream Type": "Stream Type",
+  "Output Mode": "Output Mode",
+  "Streaming": "Steaming",
+  "Enable Advanced Encoder Settings": "Enable Advanced Encoder Settings",
+  "Enforce streaming service bitrate limits": "Enforce streaming service bitrate limits",
+  "Encoder Preset (Higher = Less CPU)": "Encoder Preset (Higher = Less CPU)",
+  "Generate File Name without Space": "Generate File Name without Space",
+  "Recording Quality": "Recording Quality",
+  "Recording Format": "Recording Format",
+  "Custom Muxer Settings": "Custom Muxer Settings",
+  "Enable Replay Buffer": "Enable Replay Buffer",
+  "Base (Canvas) Resolution": "Base (Canvas) Resolution",
+  "Output (Scaled) Resolution": "Output (Scaled) Resolution",
+  "Downscale Filter": "Downscale Filter",
+  "Bilinear (Fastest, but blurry if scaling)": "Bilinear (Fastest, but blurry if scaling)",
+  "Bicubic (Sharpened scaling, 16 samples)": "Bicubic (Sharpened scaling, 16 samples)",
+  "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (Sharpened scaling, 32 samples)",
+  "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query."
 }
