--- a/i18n/en-US/streaming.json
+++ b/i18n/en-US/streaming.json
@@ -41,6 +41,9 @@
   "Go to Youtube Live Dashboard to control your stream": "Go to Youtube Live Dashboard to control your stream",
   "Are you sure you want to exit while live?": "Are you sure you want to exit while live?",
   "Enable the preview stream": "Enable the preview stream",
-  "Disable the preview stream, can help with CPU": "Disable the preview stream, can help with CPU"
+  "Disable the preview stream, can help with CPU": "Disable the preview stream, can help with CPU",
+  "viewers": "viewers",
+  "Refresh Chat": "Refresh Chat",
+  "Your chat is currently offline": "Your chat is currently offline"
 
 }
