--- a/i18n/en-US/settings.json
+++ b/i18n/en-US/settings.json
@@ -46,5 +46,22 @@
   "Bilinear (Fastest, but blurry if scaling)": "Bilinear (Fastest, but blurry if scaling)",
   "Bicubic (Sharpened scaling, 16 samples)": "Bicubic (Sharpened scaling, 16 samples)",
   "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (Sharpened scaling, 32 samples)",
-  "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query."
+  "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query.",
+  "Do not back up my media files in the cloud (requires app restart)": "Do not back up my media files in the cloud (requires app restart)",
+  "FPS Type": "FPS Type",
+  "Common FPS Values": "Common FPS Values",
+  "Integer FPS Value": "Integer FPS Value",
+  "Fractional FPS Value": "Fractional FPS Value",
+  "Process Priority": "Process Priority",
+  "Color Format": "Color Format",
+  "Audio Monitoring Device": "Audio Monitoring Device",
+  "Disable Windows audio ducking": "Disable Windows audio ducking",
+  "YUV Color Space": "YUV Color Space",
+  "YUV Color Range": "YUV Color Range",
+  "Stream Delay": "Stream Delay",
+  "Duration (Seconds)": "Duration (Seconds)",
+  "Preserved cutoff point (increase delay) when reconnecting": "Preserved cutoff point (increase delay) when reconnecting",
+  "Desktop Audio Device": "Desktop Audio Device",
+  "Mic/Auxiliary Device": "Mic/Auxiliary Device",
+  "Recording Path": "Recording Path"
 }
