--- a/i18n/en-US/settings.json
+++ b/i18n/en-US/settings.json
@@ -31,7 +31,7 @@
   "Snap Sources to other sources": "Snap Sources to other sources",
   "Stream Type": "Stream Type",
   "Output Mode": "Output Mode",
-  "Streaming": "Steaming",
+  "Streaming": "Streaming",
   "Enable Advanced Encoder Settings": "Enable Advanced Encoder Settings",
   "Enforce streaming service bitrate limits": "Enforce streaming service bitrate limits",
   "Encoder Preset (Higher = Less CPU)": "Encoder Preset (Higher = Less CPU)",
