add new strings

--- a/i18n/en-US/widgets.json
+++ b/i18n/en-US/widgets.json
@@ -16,5 +16,10 @@
   "Add %{widgetscount} Widgets": "Add %{widgetscount} Widgets",
   "Rather do this manually?": "Rather do this manually?",
   "Setup later": "Setup later",
-  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "Widget Theme installed & activated. Click here to manage your Widget Profiles."
+  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "Widget Theme installed & activated. Click here to manage your Widget Profiles.",
+  "Follow": "Follow",
+  "Subscription": "Subscription",
+  "Donation": "Donation",
+  "Bits": "Bits",
+  "Host": "Host"
 }
